...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_form_root"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <com.braintreepayments.api.dropin.view.LoadingHeader
        android:id="@+id/bt_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_header_container_height"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <ScrollView
        tools:ignore="UnusedAttribute"
        android:id="@+id/bt_form_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_header_container"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@id/bt_card_form_submit_button"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
