...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                style="@style/bt_payment_method_app_switch_button"
                android:id="@+id/bt_paypal_monogram_button"
                android:src="@drawable/bt_paypal_monogram"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/bt_form_field_padding"
                android:layout_marginRight="@dimen/bt_form_padding"
                android:contentDescription="@string/bt_pay_with_paypal"
                android:background="@drawable/bt_paypal_monogram_payment_button_background" />
...
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/bt_white">

                <ImageButton
                    style="@style/bt_payment_method_app_switch_button"
                    android:id="@+id/bt_paypal_button"
                    android:src="@drawable/bt_logo_paypal"
                    android:contentDescription="@string/bt_pay_with_paypal" />

                <View
                    style="@style/bt_app_switch_button_divider"
                    android:id="@+id/bt_payment_button_divider" />
...
